fix : sonar issues